# notifier

./: Cargo.toml  LICENSE  README.md  notifier.yaml
.githhub/workflows/: unused.yml
.github/: dependabot.yml
.github/workflows/: pr_checks.yml  unused.yml
src/: job_scheduler.rs  lib.rs  main.rs  notifier.rs  notifier_gui.rs  yaml.rs
wix/: main.wxs
