[package]
name = "notifier"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.6"
cron = "0.9.0"
yaml-rust = "0.4.5"
chrono = "0.4.19"
# job_scheduler = "1.2.1"
home = "0.5.3"
uuid = { version = "0.8", features = ["v4"] }