[package]
name = "notifier"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/ZimboPro/notifier"
authors = ["Leslie de Jager"]

[package.metadata.wix]
upgrade-guid = "9F49C245-691B-4EA3-B6D1-424680E59D45"
path-guid = "89E43798-56ED-4A64-B8E0-85A2E181BD6C"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.6"
cron = "0.9.0"
chrono = "0.4.19"
# job_scheduler = "1.2.1"
home = "0.5.3"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
eframe = "0.27.2"
color-eyre = "0.6.2"
auto-launch = "0.4.0"
thiserror = "1.0.47"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
